feat/agregar tipos y colores a las clases pokemon, agregar fondos

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -16,6 +16,7 @@ $general-fonts: "Play", sans-serif;
 
 body {
   padding: 0.5rem 1.5rem;
+  background-image: url(/src/img/fondo4.jpg);
 }
 /* HEADER SECTION */
 
@@ -157,10 +158,11 @@ body {
 
 /* MAIN SECTION */
 .pokemon-details-container {
-    background: url(/src/img/backgraund-url.jpg);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+    // background: url(/src/img/backgraund-url.jpg);
+  background-color: #000000bd;
+  // display: flex;
+  // flex-direction: column;
+  // align-items:flex-end;
   padding: 20px;
   border-radius: 20px;
   max-width: 800px; // Ajusta el ancho máximo si es necesario
@@ -226,14 +228,14 @@ h2 {
 }
 
 .pokemon-info {
-  background: #8100005e;
+  background: #810061ab;
   padding: 30px;
   border-radius: 10px;
-  width: 60%;
-  height: 60vh;
+  width: 100%;
+  height: 50%;
   text-align: center;
   display: grid;
-  grid-template-columns: repeat(2, 1fr); // Dos columnas
+  grid-template-columns: repeat(3, 1fr); // Dos columnas
   gap: 10px; // Espacio entre columnas
 
   p {
@@ -323,20 +325,61 @@ h2 {
         }
 
         &.type-fire {
-          background-color: #da4444d5;
+          background-color: #e07918d5;
         }
 
         &.type-water {
-          background-color: #2889f89a;
+          background-color: #2b75c99a;
         }
 
         &.type-grass {
-          background-color: #41d65a75;
+          background-color: #a9f3ad86;
+        }
+
+        &.type-bug {
+          background-color: #97ee6fc5;
+        }
+
+        &.type-electric {
+          background-color: #fadd36be;
+        }
+
+        &.type-psychic {
+          background-color: #dca0ff77;
+        }
+
+        &.type-fairy {
+          background-color: #faaadfc4;
+        }
+
+
+        &.type-steel {
+          background-color: #f7f7f7b2;
+        }
+
+        &.type-fairy {
+          background-color: transparent;
+        }
+
+        &.type-ghost {
+          background-color: #f5edede5;
+        }
+
+        &.type-rock {
+          background-color: #8a7143ab;
+        }
+
+        &.type-dark {
+          background-color: #000000ab;
+        }
+
+        &.type-poison {
+          background-color: #350f32ce;
         }
 
         // Agrega más tipos según sea necesario
         &.type-default {
-          background-color: #a3c4c2b0;
+          background-color: #d5d8d87c;
         }
       }
       .error-message {
