feat/Agregar transparencia al type-normal en scss

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -384,7 +384,7 @@ h2 {
           background-color: #f7f7f7b2;
         }
 
-        &.type-fairy {
+        &.type-normal {
           background-color: transparent;
         }
 
