feat/Agregar busqueda al main y cambiando color del error en el footer

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -410,7 +410,7 @@ h2 {
         }
       }
       .error-message {
-        color: rgb(0, 0, 0);
+        color: $color-white;
         font-size: 1.2em;
         text-align: center;
         margin: 20px;
