--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -16,8 +16,19 @@ $general-fonts: "Play", sans-serif;
 
 body {
   padding: 0.5rem 1.5rem;
-  background-image: url(/src/img/fondo4.jpg);
+  // background-image: url(/src/img/fondo4.jpg);
+  background-color: white;
+  color: black;
+  transition: background-color 0.9s, color 0.9s;
 }
+
+/* Modo oscuro */
+body.dark-mode {
+  background-color: black;
+  color: white;
+}
+
+
 /* HEADER SECTION */
 
 .header {
@@ -34,6 +45,7 @@ body {
     padding: 1rem;
     background-color:  #050505b9;
     border-radius: 15px 15px;
+    border: 4px solid rgb(163, 118, 255);
 
     // .logo {
     //   display: flex;
@@ -64,7 +76,7 @@ body {
       input {
         background-color: $color-white;
         outline: none;
-        border: 2px solid #810061ab;
+        border: 2px solid rgb(163, 118, 255);
         border-radius: 20px 0 0 20px;
         width: 100%;
         height: 100%;
@@ -77,8 +89,8 @@ body {
       button {
         width: 15.5%;
         height: 100%;
-        background-color: #810061ab;
-        border: 2px solid #810061ab;
+        background-color: rgb(163, 118, 255);
+        border: 2px solid rgb(163, 118, 255);
         border-radius: 0 20px 20px 0;
         cursor: pointer;
         display: flex;
@@ -176,13 +188,13 @@ body {
 
 /* MAIN SECTION */
 .pokemon-details-container {
-    // background: url(/src/img/backgraund-url.jpg);
-  background-color: #000000bd;
-  // display: flex;
-  // flex-direction: column;
-  // align-items:flex-end;
+  background-color: #050505b9;
+  display: flex;
+  flex-direction: column;
+  align-items:center;
   padding: 20px;
   border-radius: 20px;
+  border: 4px solid rgb(163, 118, 255);
   max-width: 800px; // Ajusta el ancho máximo si es necesario
   margin: auto;
   margin-top: 20px;
@@ -247,14 +259,14 @@ h2 {
 }
 
 .pokemon-info {
-  background: #810061ab;
+  border: 2px solid rgb(163, 118, 255);
   padding: 30px;
   border-radius: 10px;
-  width: 100%;
-  height: 50%;
+  width: 60%;
+  height: 60vh;
   text-align: center;
   display: grid;
-  grid-template-columns: repeat(3, 1fr); // Dos columnas
+  grid-template-columns: repeat(2, 1fr); // Dos columnas
   gap: 10px; // Espacio entre columnas
 
   p {
@@ -298,6 +310,8 @@ h2 {
   padding: 3rem;
   background-color: #050505b9;
   border-radius: 15px 15px 0 0;
+  border: 4px solid rgb(163, 118, 255);
+  
 
 
 
@@ -332,6 +346,7 @@ h2 {
         overflow: visible; // Permitir que el contenido se desborde
         padding-bottom: 2rem; // Espacio para el nombre
         flex-direction: column;
+        cursor: pointer;
 
         .pokemon-img {
           width: 150px;
