--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,31 +1,32 @@
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+$color-verdeoscuro: #006769;
+$color-iconobusqueda: #40A578;
+$color-bordes: #E6FF94;
 $bg-color: #181818;
-$color-gray: #6f6f6f;
-$color-gray2: #a3a3a3;
-$color-black: #373737;
 $color-white: #ffffff;
-$general-fonts: "Play", sans-serif;
-
+$color-fondo: #FFF6E9;
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Comfortaa", sans-serif;;
+  font-family: "Prompt", sans-serif;
+  font-weight: 400;
 }
 
 body {
   padding: 0.5rem 1.5rem;
-  // background-image: url(/src/img/fondo4.jpg);
-  background-color: white;
-  color: black;
+  background-color: $color-fondo;
+  color: $color-white;
   transition: background-color 0.9s, color 0.9s;
+  // animation-duration: 500ms;
 }
 
 /* Modo oscuro */
 body.dark_mode {
   background-color: black;
   color: white;
+  transition: background-color 0.9s, color 0.9s;
 }
 
 
@@ -36,6 +37,9 @@ body.dark_mode {
   flex-direction: column;
   justify-content: center;
   gap: 1rem;
+  backdrop-filter: blur(5px);
+  background-color: $color-verdeoscuro;
+  border-radius: 15px 15px;
 
   section {
     display: flex;
@@ -43,15 +47,7 @@ body.dark_mode {
     justify-content: center;
     gap: 1.5rem;
     padding: 1rem;
-    background-color:  #050505b9;
     border-radius: 15px 15px;
-    border: 4px solid rgb(163, 118, 255);
-
-    // .logo {
-    //   display: flex;
-    //   align-items: center;
-    //   margin-right: 1rem;
-    // }
 
     .logo-img {
       display: flex;
@@ -64,7 +60,7 @@ body.dark_mode {
     h1 {
       font-size: 2.3vw;
       // color: $color-white;
-      margin-right: 2%; // Asegúrate de eliminar el margen por defecto
+      margin-right: 2%;
     }
 
     form {
@@ -76,7 +72,7 @@ body.dark_mode {
       input {
         background-color: $color-white;
         outline: none;
-        border: 2px solid rgb(163, 118, 255);
+        border: 2px solid $color-iconobusqueda;
         border-radius: 20px 0 0 20px;
         width: 100%;
         height: 100%;
@@ -89,8 +85,8 @@ body.dark_mode {
       button {
         width: 15.5%;
         height: 100%;
-        background-color: rgb(163, 118, 255);
-        border: 2px solid rgb(163, 118, 255);
+        background-color: $color-iconobusqueda;
+        border: 2px solid $color-iconobusqueda;
         border-radius: 0 20px 20px 0;
         cursor: pointer;
         display: flex;
@@ -100,11 +96,11 @@ body.dark_mode {
         svg path{
           width: 1.76vw;
           color: $color-white;
+          fill: $color-white;
         }
       }
     }
     #toggle_dark_mode{
-      background-color: blue;
       border-radius: 20px;
       border: none;
       position: relative;
@@ -126,7 +122,6 @@ body.dark_mode {
         box-shadow: 0px 0px 2px 2px black;
       }
       &.active{
-        background: yellow;
         color: #181818;
         &::after{
           right: 0;
@@ -180,7 +175,7 @@ body.dark_mode {
       margin-bottom: 1rem; // Eliminar margen superior
 
       input {
-        
+
         width: 84.5%;
         height: 100%;
         font-size: 1rem;
@@ -228,13 +223,14 @@ body.dark_mode {
 
 /* MAIN SECTION */
 .pokemon-details-container {
-  background-color: #050505b9;
+  background-color: $color-verdeoscuro;
+  backdrop-filter: blur(1.5625rem);
   display: flex;
   flex-direction: column;
   align-items:center;
   padding: 20px;
   border-radius: 20px;
-  border: 4px solid rgb(163, 118, 255);
+  // border: 4px solid rgb(163, 118, 255);
   max-width: 800px; // Ajusta el ancho máximo si es necesario
   margin: auto;
   margin-top: 20px;
@@ -272,7 +268,7 @@ body.dark_mode {
   gap: 8px;
   display: flex;
   align-items: center; // Alinea el ícono y el nombre en la misma línea
-  background: #050505b9;
+  border: 2px solid $color-bordes;
   padding: 10px;
   border-radius: 10px;
   margin-bottom: 10px;
@@ -299,7 +295,7 @@ h2 {
 }
 
 .pokemon-info {
-  border: 2px solid rgb(163, 118, 255);
+  border: 2px solid $color-bordes;
   padding: 30px;
   border-radius: 10px;
   width: 60%;
@@ -346,12 +342,12 @@ h2 {
 
 
 /* SECTION FOOTER */
-.footer {
+  .footer {
+  backdrop-filter: blur(1.5625rem);
   padding: 3rem;
-  background-color: #050505b9;
+  background-color: $color-verdeoscuro;
   border-radius: 15px 15px 0 0;
-  border: 4px solid rgb(163, 118, 255);
-  
+
 
 
 
@@ -364,8 +360,8 @@ h2 {
     h3 {
       font-size: 2.5rem;
       margin-bottom: 15px;
-      // color: $color-white; 
-      
+      // color: $color-white;
+
     }
 
     #pokemon-cards {
@@ -470,7 +466,7 @@ h2 {
         text-align: center;
         margin: 20px;
       }
-      
+
     }
   }
 
@@ -479,7 +475,7 @@ h2 {
     section {
       flex-direction: column; // Alinear en columna para móviles
     }
-    
+
     #pokemon-cards {
       display: grid; // Cambiar a diseño en cuadrícula
       grid-template-columns: repeat(auto-fit, minmax(100px, 1fr)); // Dos columnas en tamaño reducido
